docs_source/v2.0/Integrations/attribution/adjust.md
---
title: "Adjust"
slug: "adjust"
excerpt: "Integrate Purchases SDK with Adjust"
hidden: false
createdAt: "2018-12-13T18:49:32.658Z"
updatedAt: "2019-03-12T21:52:02.591Z"
---
With our Adjust integration you can:
* Accurately track subscriptions generated from Adjust campaigns, allowing you to know precisely how much revenue your campaigns generate.
* Send trial conversions and renewals directly from RevenueCat to Adjust, allowing for tracking without an app open.
* Continue to follow your cohorts for months to know the long tail revenue generated by your campaigns.
[block:callout]
{
  "type": "success",
  "body": "This section assumes you've followed our [Quickstart](doc:getting-started-1) section of our Getting Started guide to install and configure our SDK."
}
[/block]

[block:api-header]
{
  "title": "1. Send attribution data to RevenueCat"
}
[/block]
When you receive the `adjustAttributionChanged` callback you can use the `addAttributionData` method for passing the attribution data dictionary:

### Attaching attribution data to a user
[block:code]
{
  "codes": [
    {
      "code": "import Adjust\n\nextension AppDelegate: AdjustDelegate {\n    func adjustAttributionChanged(_ attribution: ADJAttribution?) {\n        if let data = attribution?.dictionary() {\n            Purchases.shared.addAttributionData(data, from: .adjust)\n        }\n    }\n}",
      "language": "swift",
      "name": "Swift"
    },
    {
      "code": "#import <Adjust/Adjust.h>\n\n@interface AppDelegate : UIResponder <UIApplicationDelegate, AdjustDelegate>\n  \n- (void)adjustAttributionChanged:(ADJAttribution *)attribution {\n  [[RCPurchases sharedPurchases] addAttributionData:attribution.dictionary\n                         fromNetwork:RCAttributionNetworkAdjust];\n}\n\n@end",
      "language": "objectivec",
      "name": "Objective-C"
    },
    {
      "code": "config.setOnAttributionChangedListener(new OnAttributionChangedListener() {\n    @Override\n    public void onAttributionChanged(AdjustAttribution attribution) {\n    \tMap<String, String> data = new HashMap<String, String>();\n      \n      data.put(\"trackerToken\", attribution.trackerToken);\n      data.put(\"trackerName\", attribution.trackerName);\n      data.put(\"network\", attribution.network);\n      data.put(\"campaign\", attribution.campaign);      \n      data.put(\"adgroup\", attribution.adgroup);\n      data.put(\"creative\", attribution.creative);\n      data.put(\"clickLabel\", attribution.clickLabel);\n      data.put(\"adid\", attribution.adid);\n      \n      Purchases.getSharedInstance().addAttributionData(data, Purchases.AttributionNetwork.ADJUST);\n    }\n});",
      "language": "java"
    },
    {
      "code": "// Psuedo Example\nlet attributionData = await Attribution.getConversionData();\nPurchases.sharedInstance.addAttributionData(data, Purchases.ATTRIBUTION_NETWORKS.ADJUST);",
      "language": "javascript"
    },
    {
      "code": "void OnStart() {\n  AdjustConfig adjustConfig = new AdjustConfig(\"{Your App Token}\", AdjustEnvironment.Sandbox);\n  adjustConfig.setAttributionChangedDelegate(this.attributionChangedDelegate);\n  Adjust.start(adjustConfig);\n}\n\npublic void attributionChangedDelegate(AdjustAttribution attribution)\n{\n  Purchases purchases = GetComponent<Purchases>();\n  Purchases.AdjustData data = new Purchases.AdjustData();\n\n  data.adid = attribution.adid;\n  data.network = attribution.network;\n  data.adgroup = attribution.adgroup;\n  data.campaign = attribution.campaign;\n  data.creative = attribution.creative;\n  data.clickLabel = attribution.clickLabel;\n  data.trackerName = attribution.trackerName;\n  data.trackerToken = attribution.trackerToken;\n\n  Purchases.sharedInstance.AddAdjustAttributionData(data);\n}",
      "language": "csharp",
      "name": "Unity"
    }
  ]
}
[/block]

[block:callout]
{
  "type": "info",
  "title": "Load Order Dependency",
  "body": "Make sure that when `adjustAttributionChanged()` is called, you send the attribution data to the correct App User ID. In the case that attribution occurs before creating an account, you may wish to defer calling `addAttributionData` or perhaps you will want to create an [alias](doc:user-ids)."
}
[/block]
#### Advertising Identifiers
In order for Adjust to forward revenue information to 3rd party partners, you need the iOS IDFA or Google Play AdId. To forward this to RevenueCat, add the `rc_idfa` or `rc_gps_adid` key to the attribution params *before* calling the `addAttributionData` method: 
[block:code]
{
  "codes": [
    {
      "code": "import Adjust\nimport AdSupport\n\nextension AppDelegate: AdjustDelegate {\n    func adjustAttributionChanged(_ attribution: ADJAttribution?) {\n        if var data = attribution?.dictionary() {\n            let idfa = ASIdentifierManager.shared().advertisingIdentifier.uuidString\n            data[\"rc_idfa\"] = idfa\n            Purchases.shared.addAttributionData(data, from: .adjust)\n        }\n    }\n}",
      "language": "swift"
    },
    {
      "code": "#import <Adjust/Adjust.h>\n#import <AdSupport/ASIdentifierManager.h>\n\n@interface AppDelegate : UIResponder <UIApplicationDelegate, AdjustDelegate>\n  \n- (void)adjustAttributionChanged:(ADJAttribution *)attribution {\n    NSMutableDictionary *attributionData = attribution.dictionary;\n    [attributionData setValue:ASIdentifierManager.sharedManager.advertisingIdentifier.UUIDString\n                       forKey:@\"rc_idfa\"];\n    [[RCPurchases sharedPurchases] addAttributionData:attributionData\n                                          fromNetwork:RCAttributionNetworkAdjust];\n}\n\n@end\n",
      "language": "objectivec"
    },
    {
      "code": "import com.google.android.gms.ads.identifier.AdvertisingIdClient;\nimport com.google.android.gms.ads.identifier.AdvertisingIdClient.Info;\n\nconfig.setOnAttributionChangedListener(new OnAttributionChangedListener() {\n    @Override\n    public void onAttributionChanged(AdjustAttribution attribution) {\n    \tMap<String, String> data = new HashMap<String, String>();\n      \n      Info adInfo = null;\n      try {\n        adInfo = AdvertisingIdClient.getAdvertisingIdInfo(context);\n\n      } catch (IOException e) {\n        // Unrecoverable error connecting to Google Play services (e.g.,\n        // the old version of the service doesn't support getting AdvertisingId).\n\n      } catch (GooglePlayServicesAvailabilityException e) {\n        // Encountered a recoverable error connecting to Google Play services. \n\n      } catch (GooglePlayServicesNotAvailableException e) {\n        // Google Play services is not available entirely.\n      }\n      \n      data.put(\"rc_gps_adid\", adInfo.getId());\n      \n      data.put(\"trackerToken\", attribution.trackerToken);\n      data.put(\"trackerName\", attribution.trackerName);\n      data.put(\"network\", attribution.network);\n      data.put(\"campaign\", attribution.campaign);      \n      data.put(\"adgroup\", attribution.adgroup);\n      data.put(\"creative\", attribution.creative);\n      data.put(\"clickLabel\", attribution.clickLabel);\n      data.put(\"adid\", attribution.adid);\n      \n      Purchases.getSharedInstance().addAttributionData(data, Purchases.AttributionNetwork.ADJUST);\n    }\n});",
      "language": "java",
      "name": "Java"
    }
  ]
}
[/block]

[block:callout]
{
  "type": "danger",
  "title": "Client Side Revenue Events",
  "body": "Make sure to remove all client side tracking of revenue. Since RevenueCat will be sending events for all revenue actions, tracking purchases with the Adjust SDK directly can lead to double counting of revenue in Adjust."
}
[/block]

[block:api-header]
{
  "title": "2. Send RevenueCat events into Adjust"
}
[/block]
After you've set up the *Purchase* SDK to send attribution data from Adjust to RevenueCat, you can "turn on" the integration and configure the event tokens from the RevenueCat dashboard.

1. Navigate to your app in the RevenueCat dashboard and choose 'Adjust' from the integrations menu. 
2. Add your app tokens and event tokens for iOS and/or Android app
3. Select whether you want RevenueCat to report proceeds (after app store cut) or revenue (gross sales)
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/f0ba2b1-adjust.png",
        "adjust.png",
        1717,
        3551,
        "#f9f9f9"
      ],
      "caption": "Adjust configuration screen"
    }
  ]
}
[/block]

[block:api-header]
{
  "title": "Adjust Testing Console"
}
[/block]
Adjust provides a testing console to verify attribution data for sandbox users before moving to production. We recommend you follow their testing guide if you're submitting an app for the first time with Adjust attribution.

**[Adjust Testing Console Docs :fa-arrow-right:](https://docs.adjust.com/en/testing-console/)**
[block:api-header]
{
  "title": "Verifying Sandbox Events"
}
[/block]
RevenueCat will send Sandbox subscription events to Adjust's in sandbox mode. You can see Adjust sandbox events using the following filter in Adjust:
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/dccd96f-Screen_Shot_2018-12-14_at_8.03.54_PM.png",
        "Screen Shot 2018-12-14 at 8.03.54 PM.png",
        642,
        1682,
        "#eef3f5"
      ],
      "caption": "Use the \"SANDBOX MODE\" filter in Adjust to see sandbox events from RevenueCat"
    }
  ]
}
[/block]

[block:callout]
{
  "type": "success",
  "title": "You've done it!",
  "body": "You should start seeing events from RevenueCat appear in Adjust"
}
[/block]